<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ac_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ninja.lbs.rxandroid.MainActivity">

    <TextView
        android:id="@+id/filter_numbers_screen"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/screen_filter_numbers" />

    <TextView
        android:id="@+id/group_screen"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/screen_group" />

    <TextView
        android:id="@+id/on_click_screen"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/screen_on_click" />

    <TextView
        android:id="@+id/edit_text_screen"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/screen_edit_text" />
</LinearLayout>
