<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ac_click"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ninja.lbs.rxandroid.OnClickActivity">

    <TextView
        android:id="@+id/click_first_button"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/button_click_first" />

    <TextView
        android:id="@+id/click_late_button"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/button_click_late" />

    <TextView
        android:id="@+id/click_old_style_button"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/button_click_old_style" />

    <ninja.lbs.rxandroid.view.CustomLog
        android:id="@+id/custom_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
